--- a/FAQ.html
+++ b/FAQ.html
@@ -11,31 +11,6 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  
-  <!-- Stylesheets -->
-    <link href="Faq/bootstrap.css" rel="stylesheet">
-    <link href="Faq/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
-    <link href="Faq/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
-    <link href="Faq/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
-    <link href="Faq/style.css" rel="stylesheet">
-    <link href="Faq/responsive.css" rel="stylesheet">
-    <link href="https://hthcoin.world/favicon.ico" rel="icon">
-    <!-- Responsive -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script type="text/javascript" async="" src="Faq/analytics.js"></script><script async="" src="Faq/js.js"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-121537271-1');
-    </script>
-    
 </head>
 <body>
 
@@ -55,6 +30,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
@@ -62,9 +38,11 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="https://landforthehomeless.org">L4H</a></li>
+            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
+            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
+	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
+	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
           </ul>
         </li>
         <li class="dropdown">
@@ -97,15 +75,6 @@
     </div>
   </div>
 </nav>
-
-
-
-
-
-
-
-
-
 
 <!-- Event Section -->
 <section class="event-section" style="background-image:url(images/background/homeless-2223116_1280.jpg);">
