--- a/resources.html
+++ b/resources.html
@@ -5,29 +5,14 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-<link href="Resources/bootstrap.css" rel="stylesheet">
-    <link href="Resources/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
-    <link href="Resources/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
-    <link href="Resources/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
-    <link href="Resources/style.css" rel="stylesheet">
-    <link href="Resources/responsive.css" rel="stylesheet">
-    <link href="https://hthcoin.world/favicon.ico" rel="icon">	
+  <title>https://devilking6105.github.io/hthcoin/</title>
+<body bgcolor="#000">
 
-
-<script type="text/javascript" async="" src="Resources/analytics.js"></script><script async="" src="Resources/js.js"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-121537271-1');
-    </script>	
-
-<title>https://devilking6105.github.io/hthcoin/</title>
-
-	<body bgcolor="#000">
-
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+<body>
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
@@ -45,6 +30,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
@@ -52,9 +38,11 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="https://landforthehomeless.org">L4H</a></li>
+            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
+            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
+	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
+	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
           </ul>
         </li>
         <li class="dropdown">
@@ -87,6 +75,7 @@
     </div>
   </div>
 </nav>
+
     
 <!-- Event Section -->
 <section class="event-section">
