--- a/specifications.html
+++ b/specifications.html
@@ -5,29 +5,6 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-	<!-- Stylesheets -->
-    <link href="HTH/bootstrap.css" rel="stylesheet">
-    <link href="HTH/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
-    <link href="HTH/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
-    <link href="HTH/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
-    <link href="HTH/style.css" rel="stylesheet">
-    <link href="HTH/responsive.css" rel="stylesheet">
-    <link href="https://hthcoin.world/favicon.ico" rel="icon">
-	 <!-- Responsive -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-    <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
-	 <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script type="text/javascript" async="" src="HTH/analytics.js"></script><script async="" src="HTH/js.js"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-121537271-1');
-    </script>
-	
   <title>https://devilking6105.github.io/hthcoin/</title>
 <body bgcolor="#000">
 
@@ -53,6 +30,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/index.html">Home <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="https://devilking6105.github.io/hthcoin/index.html">HTH Coin</a></li>
             <li><a href="https://helpthehomelessworldwide.org">HTH Worldwide</a></li>
             <li><a href="https://devilking6105.github.io/hthcoin/charity.html">Charity</a></li>
         </ul>
@@ -60,9 +38,11 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="https://devilking6105.github.io/hthcoin/partners.html">Partners <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="https://landforthehomeless.org">L4H</a></li>
+            <li><a href="http://www.grassrootscrisis.org/">Grassroots</a></li>
+            <li><a href="http://www.salvationarmy.gr/">TSA of Greece</a></li>
+	    <li><a href="http://Www.msmmoorefoundation.org">MSM Moore Foundation</a></li>
+	    <li><a href="http://www.sgqurban.org/">SGQ URBAN</a></li>  
           </ul>
         </li>
         <li class="dropdown">
