--- a/specifications.html
+++ b/specifications.html
@@ -147,7 +147,203 @@
 </section>
 <!-- End Specifications -->
 
+<!--Main Footer-->
+<footer class="main-footer" style="background-image: url(images/background/homeless-2223116_1280.jpg);">
+    <!--Upper-->
+    <div class="footer-upper">
+        <div class="auto-container">
+            <div class="outer-box">
+                <!--Footer Logo-->
+                <div class="footer-logo"><a href="https://hthcoin.github.io/web/index.html><img src="HTH/logo.png" alt="" width="150"></a></div>
 
+                <div class="row clearfix">
+                    <div class="big-column col-md-5 col-sm-12 col-xs-12">
+                        <div class="row clearfix">
+                            <!--Footer Column-->
+                            <div class="footer-column col-md-6 col-sm-6 col-xs-12">
+                                <h3>Home</h3>
+                                <ul class="footer-links">
+                                  <li><a href="https://hthcoin.github.io/web/index.html#about" data-target="#about" class="scroll-to-target">About us</a></li>
+                                        <li><a href="https://hthcoin.github.io/web/index.html#features" data-target="#features" class="scroll-to-target">Features</a></li>
+                                        <li><a href="https://hthcoin.github.io/web/index.html#roadmap" data-target="#roadmap" class="scroll-to-target">Roadmap</a></li>
+                                        <li><a href="https://hthcoin.github.io/web/index.html#specs" data-target="#specs" class="scroll-to-target">Specs</a></li>
+                                        <li><a href="https://hthcoin.github.io/web/index.html#team" data-target="#team" class="scroll-to-target">Team</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="footer-column col-md-6 col-sm-6 col-xs-12">
+                                <h3>Menu</h3>
+                                <ul class="footer-links">
+                                    <li><a href="https://hthcoin.github.io/web/index.html">Home</a></li>
+                                    <li class="current"><a href="https://hthcoin.github.io/web/Charity.html">Charity</a></li>
+                                <li class=""><a href="https://hthcoin.github.io/web/Partners.html">Partners</a></li>
+                                <li class=""><a href="https://hthcoin.github.io/web/Downloads.html">Downloads</a></li>
+                                    <li><a href="https://explorer.hth.world/" target="_blank">Explorer</a></li>
+                                    <li><a href="https://wallet.crypto-bridge.org/market/BRIDGE.HTH_BRIDGE.BTC" target="_blank">Exchanges</a></li>
+                                    <li class=""><a href="https://hthcoin.github.io/web/Resources.html">Resources</a></li>
+                                <li class=""><a href="https://hthcoin.github.io/web/Faq.html">FAQ</a></li>
+                                <li><a href="https://github.com/HTHcoin/HTH/wiki/HTH-Help-The-Homeless-Coin-wiki/" target="_blank">Wiki</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="big-column col-md-7 col-sm-12 col-xs-12">
+                        <div class="row clearfix">
+                            <!--Footer Column-->
+                            <div class="footer-column col-md-6 col-sm-6 col-xs-12">
+                                <h3>Follow/Contact</h3>
+                                <ul class="footer-links">
+                                    <li><a href="mailto:hthcoin@gmail.com">hthcoin@gmail.com</a></li>
+                                    <li><a href="https://bitcointalk.org/index.php?topic=4578705.0" target="_blank" rel="nofollow noopener">Announcement</a></li>
+                                    <li><a href="https://fb.me/hth.World" target="_blank" rel="nofollow">Facebook</a></li>
+                                    <li><a href="https://twitter.com/HTHCoin" target="_blank" rel="nofollow">Twitter</a></li>
+                                    <li><a href="https://discord.gg/qjcs5TP" target="_blank" rel="nofollow">Discord</a></li>
+                                </ul>
+                            </div>
+
+                            <!--Footer Column-->
+                            <div class="footer-column col-md-6 col-sm-6 col-xs-12">
+                                <h3>HTH Coin</h3>
+                                <div class="text">
+                                    <p>The team at <strong>Help The Homeless Coin</strong> is dedicated to supporting and focusing on those that need assistance by aiding charities with boots on the ground.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Bottom-->
+    <div class="footer-bottom">
+        <div class="auto-container">
+            <div class="copyright">Copyright <a href="https://hthcoin.github.io/web/index.html">Help The Homeless Coin</a> © 2018. All Rights Reserved.</div>
+        </div>
+    </div>
+</footer>
+<!-- End Footer -->
+
+<script>
+// Automatic Slideshow - change image every 10 seconds
+var myIndex = 0;
+carousel();
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}
+  x[myIndex-1].style.display = "block";
+  setTimeout(carousel, 10000);
+}
+</script>
+
+		    <!--Scroll to top-->
+<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up" style="color:#fcc005"></span></div>
+
+<script src="HTH/jquery.js"></script>
+<script src="HTH/bootstrap.js"></script>
+<!--Revolution Slider-->
+<script src="HTH/jquery_004.js"></script>
+<script src="HTH/jquery_002.js"></script>
+<script src="HTH/revolution_003.js"></script>
+<script src="HTH/revolution_009.js"></script>
+<script src="HTH/revolution_005.js"></script>
+<script src="HTH/revolution_007.js"></script>
+<script src="HTH/revolution_008.js"></script>
+<script src="HTH/revolution.js"></script>
+<script src="HTH/revolution_006.js"></script>
+<script src="HTH/revolution_002.js"></script>
+<script src="HTH/revolution_004.js"></script>
+<script src="HTH/clipboard.js"></script>
+<script src="HTH/main-slider-script.js"></script>
+<!--End Revolution Slider-->
+<script src="HTH/jquery-ui.js"></script>
+<script src="HTH/jquery_003.js"></script>
+<script src="HTH/owl.js"></script>
+<script src="HTH/wow.js"></script>
+<script src="HTH/appear.js"></script>
+<script src="HTH/script.js"></script>
+<script>
+    var $progress = $(".progress"),
+        $bar = $(".progress__bar"),
+        update,
+        resetColors,
+        hth = 0,
+        btc = 0,
+        hthToBtc = 0,
+        to,
+        btcaddr = '3Kmqb2d9fBTq7kr66Hp5N47661QzS9dKoQ',
+        hthAddress = 'HF5rjaXU7s3QCKuSb6uYJvAeVa3qWC3MKm';
+    resetColors = function() {
+        $bar
+            .removeClass("progress__bar--green")
+            .removeClass("progress__bar--yellow")
+            .removeClass("progress__bar--orange")
+            .removeClass("progress__bar--blue");
+        $progress
+            .removeClass("progress--complete");
+    };
+    update = function() {
+        $.getJSON('https://api.coingecko.com/api/v3/coins/help-the-homeless-coin', function(res) {
+            var price = res.tickers[0].converted_last.btc;
+            /*price = price.split('0.')[1];
+            price = +price;*/
+            $('#jsLastPrice').text("1 HTH = " + price + " BTC");
+        }).fail(function(e) {
+            console.log(e);
+        });
+        $.getJSON('https://blockchain.info/q/addressbalance/'+ btcaddr +'?confirmations=1', function(balance) {
+            btc = +balance;
+        });
+        $.getJSON('https://api.crypto-bridge.org/api/v1/ticker', function(d) {
+            d.forEach(function(ticker) {
+                if(ticker.id === 'HTH_BTC') {
+                    hthToBtc = +ticker.last;
+                    return false;
+                }
+            });
+        });
+        $.getJSON('https://explorer.hth.world/ext/getaddress/' + hthAddress, function(res) {
+            console.log(res);
+            hth = +res.balance * 100000000;
+        }).fail(function(e) {
+            console.log(e);
+        });
+        $('.js-hth-addy').each(function(i, e) {
+            var addy = $(e).data('addy');
+            $.getJSON('https://explorer.hth.world/ext/getaddress/' + addy, function(res) {
+                $(e).text(parseInt(res.received).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","));
+            });
+        });
+        to = setInterval(function() {
+            if(hth) {
+                clearInterval(to);
+                to = null;
+                $('.js-raised').text(parseInt(hth / 100000000).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","));
+            }
+        }, 60000);
+        setTimeout(function() {
+            update();
+        }, 60000 * 5);
+    };
+    $progress.addClass("progress--active");
+    update();
+    var clipboard = new ClipboardJS('.js-copy');
+    clipboard.on('success', function(e) {
+        alert('Address Copied!');
+        e.clearSelection();
+    });
+    var clip = new ClipboardJS('.js-hth-copy');
+    clip.on('success', function(e) {
+        alert('Address Copied!');
+        e.clearSelection();
+    });
+</script>
 
 
 
